crates/weft-snapshots/tests/snapshots/solid-tsx/example-field.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-field as solid-tsx
---
import { Show } from "solid-js";

export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen(props: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Sign up">
      <div data-weft-field="">
        <label>
          <span aria-hidden="true">Email</span>
          <input data-weft-id="email" data-state="valid" aria-label="Email" type="email" placeholder="you@example.com" required aria-invalid={"valid" === "invalid" || _text(props.data?.errors?.email) !== "" ? "true" : undefined} aria-describedby={_text(props.data?.errors?.email) ? "weft-email-error" : undefined} value={_text(props.data?.email)} onInput={(_e) => { props.onChange?.("$.email", _e.currentTarget.value); _act(props.actions, { id: "email", action: "form.edit" }); }} />
        </label>
        <Show when={_text(props.data?.errors?.email)}>
          <div id={"weft-email-error"}>
            {_text(props.data?.errors?.email)}
          </div>
        </Show>
      </div>
    </main>
  );
}
