crates/weft-snapshots/tests/snapshots/solid-tsx/example-form.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-form as solid-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen(props: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Sign in">
      <form data-weft-id="login" data-state="idle" onSubmit={(_e) => { _e.preventDefault(); _act(props.actions, { id: "login", action: "auth.submit" }); }}>
        <div data-weft-field="">
          <label>
            <span aria-hidden="true">Email</span>
            <input data-weft-id="email" aria-label="Email" type="email" required value={_text(props.data?.email)} onInput={(_e) => props.onChange?.("$.email", _e.currentTarget.value)} />
          </label>
        </div>
        <div data-weft-slot="footer">
          <button data-weft-id="go" type="submit" data-variant="primary" onClick={(_e) => { _e.preventDefault(); _act(props.actions, { id: "login", action: "auth.submit" }); }}>Sign in</button>
        </div>
      </form>
    </main>
  );
}
