crates/weft-snapshots/tests/snapshots/solid-tsx/example-grid.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-grid as solid-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

export default function WeftScreen(props: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Gallery">
      <div data-weft-id="cards" style={{ gap: "var(--weft-space-lg)", display: "grid", "grid-template-columns": "repeat(3, minmax(0, 1fr))" }}>
        <div data-weft-id="card-a">Revenue</div>
        <div data-weft-id="card-b">Orders</div>
        <div data-weft-id="card-c">Visitors</div>
      </div>
    </main>
  );
}
